--- a/css/盒子模型.md
+++ b/css/盒子模型.md
@@ -5,7 +5,7 @@ CSS 基础框盒模型介绍
 
 每个盒子由四个部分（或称区域）组成，其效用由它们各自的边界（Edge）所定义（原文：defined by their respective edges，可能意指容纳、包含、限制等）。如图，与盒子的四个组成区域相对应，每个盒子有四个边界：内容边界 Content edge、内边距边界 Padding Edge、边框边界 Border Edge、外边框边界 Margin Edge。
 
-<img src="../media/css/css_hezi0.png" width="500px"/>
+<img src="../media/css/csshezi0.png" width="500px"/>
 
 
 内容区域 content area ，由内容边界限制，容纳着元素的“真实”内容，例如文本、图像，或是一个视频播放器。它的尺寸为内容宽度（或称 content-box 宽度）和内容高度（或称 content-box 高度）。它通常含有一个背景颜色（默认颜色为透明）或背景图像。
@@ -43,7 +43,7 @@ height = border + padding + 内容的高度
 我们是设置一个元素标签样式的时候，设置的 height 和 width，在标准盒子模型下，是指定为 content 的 height 和 width。
 
 <p>图片说明： </p>
-<img src="../media/css/css_hezi1.png" width="500px"/>
+<img src="../media/css/csshezi1.png" width="500px"/>
 
 代码说明:
 
@@ -65,7 +65,7 @@ style:
 
 > IE盒子模型
 
-<img src="../media/css/css_hezi2.png" width="500px"/>
+<img src="../media/css/csshezi2.png" width="500px"/>
 
 代码说明:
 
