--- a/css/盒子模型.md
+++ b/css/盒子模型.md
@@ -1,12 +1,12 @@
 # 盒子模型
 
-CSS 基础框盒模型介绍
+CSS 基础框盒模型介绍  
 
 当对一个文档进行布局（lay out）的时候，浏览器的渲染引擎会根据标准之一的 CSS 基础框盒模型（CSS basic box model），将所有元素表示为一个个矩形的盒子（box）。CSS 决定这些盒子的大小、位置以及属性（例如颜色、背景、边框尺寸…）。
 
 每个盒子由四个部分（或称区域）组成，其效用由它们各自的边界（Edge）所定义（原文：defined by their respective edges，可能意指容纳、包含、限制等）。如图，与盒子的四个组成区域相对应，每个盒子有四个边界：内容边界 Content edge、内边距边界 Padding Edge、边框边界 Border Edge、外边框边界 Margin Edge。
 
-<img src="https://mzlgit.github.io/blog/media/csshezi0.png" width="500px"/>
+<img src="https://mzlgit.github.io/blog/media/css/csshezi0.png" width="500px"/>
 
 
 内容区域 content area ，由内容边界限制，容纳着元素的“真实”内容，例如文本、图像，或是一个视频播放器。它的尺寸为内容宽度（或称 content-box 宽度）和内容高度（或称 content-box 高度）。它通常含有一个背景颜色（默认颜色为透明）或背景图像。
